# bevy_web_file_drop

./: .gitignore  Cargo.toml  README.md  flake.nix
example/: Cargo.toml
example/src/: plugin.rs
