[package]
name = "example"
publish = false
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
bevy = { workspace = true, default-features = true, features = [
  "jpeg",
  "webp",
] }
bevy_web_file_drop.path = ".."
js-sys.workspace = true
wasm-bindgen-futures = "0.4.67"
wasm-bindgen.workspace = true
